--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- Rename the title !!! -->
-		<title>Template Title</title>
+		<title>Marlatte Weather App</title>
 	</head>
 
 	<body>
